# NMPC_CASADI_CPP

./: README.md
src/: small car.md
src/Fast-Planner/fast_planner/bspline/: CMakeLists.txt
src/Fast-Planner/fast_planner/bspline_opt/: CMakeLists.txt
src/Fast-Planner/fast_planner/path_searching/: CMakeLists.txt
src/Fast-Planner/fast_planner/path_searching/src/: kinodynamic_astar.cpp
src/Fast-Planner/fast_planner/plan_env/: CMakeLists.txt
src/Fast-Planner/fast_planner/plan_env/include/plan_env/: edt_environment.h
src/Fast-Planner/fast_planner/plan_env/src/: edt_environment.cpp  sdf_map.cpp
src/Fast-Planner/fast_planner/plan_manage/: CMakeLists.txt
src/Fast-Planner/fast_planner/plan_manage/config/: traj.rviz
src/Fast-Planner/fast_planner/plan_manage/include/plan_manage/: kino_replan_fsm.h
src/Fast-Planner/fast_planner/plan_manage/launch/: 16_lidar.launch  kino_algorithm.xml  kino_replan.launch  lidar.xml  lidar_rviz.launch  real.launch  real.xml
src/Fast-Planner/fast_planner/plan_manage/src/: kino_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/Fast-Planner/fast_planner/poly_traj/: CMakeLists.txt
src/Fast-Planner/fast_planner/poly_traj/src/: traj_generator.cpp
src/Fast-Planner/fast_planner/traj_utils/: CMakeLists.txt
src/Fast-Planner/fast_planner/traj_utils/include/traj_utils/: planning_visualization.h
src/Fast-Planner/fast_planner/traj_utils/src/: planning_visualization.cpp
src/Fast-Planner/uav_simulator/Utils/rviz_plugins/src/: gamelikeinput.cpp
src/Fast-Planner/uav_simulator/Utils/uav_utils/: CMakeLists.txt
src/Fast-Planner/uav_simulator/Utils/waypoint_generator/: CMakeLists.txt
src/Fast-Planner/uav_simulator/local_sensing/: CMakeLists.txt
src/Fast-Planner/uav_simulator/local_sensing/src/: pointcloud_render_node.cpp
src/Fast-Planner/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt
src/lidar2world/: CMakeLists.txt  package.xml
src/lidar2world/src/: transform.cpp
src/mpc_tracking/: CMakeLists.txt  package.xml
src/mpc_tracking/include/mpc_tracking/: mpc.h  test_casadi.py
src/mpc_tracking/src/: mpc.cpp  mpc_node.cpp
src/omni_robot/: CMakeList.txt  README.md
src/omni_robot/omni_control/: CMakeLists.txt  README.md  package.xml
src/omni_robot/omni_control/launch/: omni_control.launch
src/omni_robot/omni_control/src/: move_to_pose.cpp  pure_pursuit.cpp
src/omni_robot/omni_fake/: CMakeLists.txt  README.md  package.xml
src/omni_robot/omni_fake/launch/: omni_fake.launch
src/omni_robot/omni_fake/rviz/: rviz_config.rviz
src/omni_robot/omni_fake/src/: odom_path_node.cpp  omni_fake_node.cpp
src/omni_robot/omni_gazebo/: CMakeLists.txt  package.xml
src/omni_robot/omni_gazebo/config/: rviz_config.rviz
src/omni_robot/omni_gazebo/launch/: gazebo.launch
src/omni_robot/omni_gazebo/meshes/: agvs_logos.dae  agvs_logos.stl  agvs_top.dae  chassis_agvs.dae  omniwheel.dae  rim.stl  rim1.dae
src/omni_robot/omni_gazebo/meshes/robot/: ExtendedAmiroOnly_degenerateDissolve_cleanUpGeometry005.dae  WheelDrive_degenerateDissolve_cleanUpGeometry002_centered.dae
src/omni_robot/omni_gazebo/urdf/: omni_robot.gazebo  omni_robot.xacro
src/omni_robot/omni_gazebo/urdf/camera/: astra.xacro  camera.xacro  generic_rgbd.xacro
src/omni_robot/omni_gazebo/urdf/laser/: hokuyo.xacro  hokuyo_gpu.xacro
src/omni_robot/omni_gazebo/urdf/proximity/: floor.xacro  proximity.xacro  ring.xacro
src/omni_robot/omni_gazebo/urdf/sensors/: astra.urdf.xacro  imu.xacro  inertial.xacro  laser_support.xacro
src/omni_robot/omni_gazebo/world/: jiandan.world  room.world  s322.world  simple.world
src/omni_robot/omni_gazebo/world/spare_room/room_test/: model.config
src/omni_robot/omni_gazebo/world/spare_room/simple/: model.config
src/omni_robot/omni_gmapping/: CMakeLists.txt  package.xml
src/omni_robot/omni_gmapping/launch/: slam_gmapping.launch
src/omni_robot/omni_gmapping/test/: rtest.cpp  test_map.py
src/omni_robot/omni_navigation/: CMakeLists.txt  package.xml
src/omni_robot/omni_navigation/launch/: amcl.launch  move_base.launch  omni_navigation.launch
src/omni_robot/omni_navigation/param/: base_local_planner_params.yaml  dwa_local_planner_params_omni.yaml
src/omni_robot/omni_path_generator/: CMakeLists.txt  package.xml
src/omni_robot/omni_path_generator/launch/: simple_path.launch
src/omni_robot/omni_path_generator/src/: simple_path.cpp
src/omni_robot/omni_teleop/: CMakeLists.txt  package.xml
src/omni_robot/omni_teleop/src/: keyboard_teleop.cpp
src/omni_robot/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
