<package>
  <name>omni_gmapping</name>
  <version>1.4.2</version>
  <license>BSD</license>
  <description>The omni_gampping package</description>
  <maintainer email="duynam@todo.todo">duynam</maintainer>
  <url>http://ros.org/wiki/gmapping</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>openslam_gmapping</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>openslam_gmapping</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>
  
  <export>
  </export>
</package>
